# MiniCPM-V-Apps

./: .gitignore  .gitmodules  AGENTS.md  DOWNLOAD.md  DOWNLOAD_zh.md  PRIVACY.md  README.md  README_zh.md
MiniCPM-V-demo/: AppDelegate.swift  Info.plist  MiniCPM-V-demo-Bridging-Header.h  MiniCPM-V-demo.entitlements  PrivacyInfo.xcprivacy  SceneDelegate.swift
MiniCPM-V-demo-Android/: .gitignore  TODO.md  gradle.properties  settings.gradle.kts  界面样式.md
MiniCPM-V-demo-Android/app/: build.gradle.kts
MiniCPM-V-demo-Android/app/src/main/: AndroidManifest.xml
MiniCPM-V-demo-Android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  logging.h  omni_jni.cpp
MiniCPM-V-demo-Android/gradle/: libs.versions.toml
MiniCPM-V-demo-Android/gradle/wrapper/: gradle-wrapper.properties
MiniCPM-V-demo-HarmonyOS/: README_zh.md  build-profile.json5
MiniCPM-V-demo-HarmonyOS/AppScope/: app.json5
MiniCPM-V-demo-HarmonyOS/entry/: build-profile.json5
MiniCPM-V-demo-HarmonyOS/entry/src/main/: module.json5
MiniCPM-V-demo-HarmonyOS/entry/src/main/cpp/: CMakeLists.txt  llama_napi.cpp  napi_init.cpp  omni_napi.cpp
MiniCPM-V-demo-HarmonyOS/entry/src/main/cpp/types/libentry/: Index.d.ts
MiniCPM-V-demo.xcodeproj/: project.pbxproj
MiniCPM-V-demo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
MiniCPM-V-demo.xcodeproj/xcshareddata/xcschemes/: MiniCPM-V-demo.xcscheme
MiniCPM-V-demo/Assets.xcassets/base/setting_accessory_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/camera/camera_flip_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/camera/capture_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/camera/flash_off_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/camera/flash_on_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/camera/mic_listen.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/camera/mic_listen_highlight.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/camera/mic_stop.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/camera/take_video_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/floating_action/generate_continue.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/avatar_placeholder.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/capture_video_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/header_tips1_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/header_tips2_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/header_tips3_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/header_tips4_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/home_nav_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/image_picker_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/input_enlarge.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/input_minimize.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/log_icon.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/robot.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/tutorial_step1_download.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/tutorial_step2_load.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/tutorial_step3_chat.imageset/: Contents.json
MiniCPM-V-demo/Assets.xcassets/home/tutorial_step4_reset.imageset/: Contents.json
MiniCPM-V-demo/Base.lproj/: LaunchScreen.storyboard
MiniCPM-V-demo/BundledV46ANE/: README.txt
MiniCPM-V-demo/MTMDWrapper/: MTMDError.swift  MTMDParams.swift  MTMDToken.swift  MTMDWrapper.swift  MTMDWrapperExample.swift
MiniCPM-V-demo/MTMDWrapper/Bridge/: MBMtmd.h  MBMtmd.mm  TtsBridge.h  TtsBridge.mm
MiniCPM-V-demo/Sources/Base/Cell/: MBImageTableViewCell.swift  MBTextTableViewCell.swift
MiniCPM-V-demo/Sources/Base/Extensions/: NSData+Extensions.swift  UIColor+Extensions.swift  UIImage+Extensions.swift  UINavigationController+Extensions.swift
MiniCPM-V-demo/Sources/Base/FDownloaderTools/: FDownLoader.m  FDownLoaderManager.m
MiniCPM-V-demo/Sources/Base/MBImageViewer/: MBImageVideoViewController.swift
MiniCPM-V-demo/Sources/Base/Model/: MBChatModel.swift  TtsEngine.swift
MiniCPM-V-demo/Sources/Base/ModelManager/: MBModelDownloadHelperV2.swift
MiniCPM-V-demo/Sources/Base/Utils/: MBAudioPlayer.swift  MBAudioRecorder.swift  MBConstants.swift  MBDeviceMemoryProbe.swift  MBHUD.swift  MBUtils+checkMD5.swift  MBUtils.swift  MarkdownRenderer.swift  MiniCPMV46CoreMLBootstrap.swift  debugLog.swift
MiniCPM-V-demo/Sources/Base/VideoFrameExtractor/: MBVideoFrameExtractor.swift
MiniCPM-V-demo/Sources/Home/Extensions/: NSTextAttachment+MBPath.swift
MiniCPM-V-demo/Sources/Home/VideoProcessQueue/: MBLiveCaptureVideoFrameManager.swift  MBVideoSerialProcessQueueManager.swift
MiniCPM-V-demo/Sources/Home/ViewController/: MBHomeViewController+CaptureVideo.swift  MBHomeViewController+CellToolBarEvent.swift  MBHomeViewController+CheckSupport.swift  MBHomeViewController+ImageProcess.swift  MBHomeViewController+LoadModel.swift  MBHomeViewController+LogTimer.swift  MBHomeViewController+NavBarEvent.swift  MBHomeViewController+SendAction.swift  MBHomeViewController+SubscribeMessageLog.swift  MBHomeViewController+UITextView.swift  MBHomeViewController+Warmup.swift  MBHomeViewController.swift  MBImageSliceSettingAlert.swift  TtsViewController.swift
MiniCPM-V-demo/Sources/Localization/: L10n+en.swift  L10n+zh.swift  L10n.swift  L10nKeys.swift
MiniCPM-V-demo/Sources/Settings/DownloadManager/: MBV26ModelDownloadManager.swift  MBV46ModelDownloadManager.swift  MBV4ModelDownloadManager.swift  MBV5ModelDownloadManager.swift  MBVoxcpm2ModelDownloadManager.swift
MiniCPM-V-demo/Sources/Settings/Model/: MBSettingsModel.swift
MiniCPM-V-demo/Sources/Tutorial/: MBTutorialCell.swift  MBTutorialModel.swift  MBTutorialViewController.swift
docs/: VOXCPM2_INTEGRATION.md
scripts/: bridge_test.mm  build_bridge_test.sh  build_xcframework.sh
(+81 files in other folders)
